cambios del index

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,6 @@ footer {
   animation-name: fadeInDown; }
 
 .divIndex4 {
-  background-color: #f7f7f5;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -82,6 +81,21 @@ footer {
   text-align: center;
   padding-top: 0.5cm;
   margin-bottom: 0.5cm; }
+
+.section1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 0.5cm;
+  padding-bottom: 0.5cm;
+  background-color: #f7f7f5; }
+
+.section_titulo {
+  text-align: center;
+  font-size: 2.25rem;
+  font-family: 'Heldane',serif;
+  color: #2c2c28; }
 
 /*EVENTOS*/
 .eventos {
@@ -205,3 +219,8 @@ footer {
     justify-content: center;
     justify-content: space-evenly;
     flex-wrap: wrap; } }
+
+@media (min-width: 10px) and (max-width: 1219px) {
+  .proximamente-div {
+    justify-content: center;
+    justify-content: space-evenly; } }
