--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -39,7 +39,6 @@
     animation-name: fadeInDown;
 }
 .divIndex4{
-    background-color: $general-background-color;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -51,4 +50,18 @@
     padding-top: 0.5cm;
     margin-bottom: 0.5cm;
 }
-
+.section1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 0.5cm;
+    padding-bottom: 0.5cm;
+    background-color: $general-background-color;
+}
+.section_titulo{
+    text-align: center;
+    font-size: 2.25rem;
+    font-family: 'Heldane',serif;
+    color: rgb(44, 44, 40);
+}
