--- a/scss/_mobilefirst.scss
+++ b/scss/_mobilefirst.scss
@@ -4,5 +4,12 @@
         justify-content: center;
         justify-content: space-evenly;
         flex-wrap: wrap;
-    }    
+    }
+}
+@media (min-width:10px) and (max-width:1219px) {
+    .proximamente-div{
+        justify-content: center;
+        justify-content: space-evenly;
+    }
+    
 }
